--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
 	},
 	"dependencies": {
 		"axios": "^1.4.0",
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"express": "^4.18.1",
+		"express-session": "^1.17.3",
+		"express-validator": "^7.0.1",
 		"morgan": "^1.10.0",
+		"mysql2": "^3.6.0",
+		"sequelize": "^6.32.1",
 		"uuid": "^9.0.0"
 	}
 }
